--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>hello</h1>
+    <title>JavaScript</title>
+    <h1>JavaScript</h1>
     <noscript>JavaScript is disabled in your browser.</noscript>
     <link rel="stylesheet" href="style.css">
 </head>
