--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <noscript>JavaScript is disabled in your browser.</noscript>
     <link rel="stylesheet" href="style.css">
 </head>
-
+<p>none</p>
 <body>
     
 
