--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>JavaScript</title>
     <h1>JavaScript</h1>
     <noscript>JavaScript is disabled in your browser.</noscript>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_indexhtml.css">
 </head>
 <p>none</p>
 <body>
-<a href="TestJS.html"> TestJS </a>
+<a href="/TestJS/TestJS.html"> TestJS </a>
 
-<script src="script.js"></script>
+<script src="script_indexhtml.js"></script>
 
 
 </body>
