--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <p>none</p>
 <body>
-<a href="/TestJS/TestJS.html"> TestJS </a>
+<a href="TestJS/TestJS.html"> TestJS </a>
 
 <script src="script_indexhtml.js"></script>
 
