--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <noscript>JavaScript is disabled in your browser.</noscript>
     <link rel="stylesheet" href="style_indexhtml.css">
 </head>
-<p>none3</p>
+<p>none</p>
 <body>
 <a href="TestJS/TestJS.html"> TestJS </a>
 
 <script src="script_indexhtml.js"></script>
 
+<a href="/Object/Object.html"> Об'єкти </a>
 
 </body>
 </html>
