--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script src="script_indexhtml.js"></script>
 
-<a href="/Object/Object.html"> Об'єкти </a>
+<a href="Object/Object.html"> Об'єкти </a>
 
 </body>
 </html>
