--- a/Object/Object.html
+++ b/Object/Object.html
@@ -3,12 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TestJS</title>
-  <h1>TestJS</h1>
+  <title>Об'єкти</title>
+  <h1>Об'єкти</h1>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <p>Об'єкт можна створити двома способами:</p>
+  <br/>
+  
+  <table>
+    <tr>
+      <td>
+        <p1>1. let user = new Object(); // синтаксис "конструктора об’єктів"          
+        </p1>
+      </td>
+
+    </tr>
+    <tr>
+      <td> 
+        <p1>2. let user = {};  // синтаксис "літералу об’єкта"
+         </p1>
+      </td>
+    </tr>
+  </table>
+
+  
+    <br>
+   
+  
+
+
+
+
+
+
+
+
+
+
+
   <script src="script_ObjectJS.js"></script>
 </body>
 </html>
