--- a/Object/Object.html
+++ b/Object/Object.html
@@ -24,10 +24,17 @@
       </td>
     </tr>
   </table>
-
-    <br>
-   
-  
+  <p>При виконнані let user = new Object(); або let user = {}; створюється пустий об'єкт без ідентифікатора та значення.</p>
+  <p>Для створення об'єкту з ідентифікатором та значенням застосовують наступний синтаксис:</p>
+  <table>
+    <tr>
+      <td>
+        <p1>let user = {name: "John", age: 30}; // об'єкт з ідентифікатором name та age та значеннями "John" та 30.
+        </p1>
+      </td>
+    </tr>
+  </table>
+    <p>(В даному випадку "John" відноситься до рядків (string), а 30 до числа (number)</p>
 
 
 
