--- a/Object/Object.html
+++ b/Object/Object.html
@@ -5,47 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Об'єкти</title>
   <h1>Об'єкти</h1>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="\style_indexhtml.css">
  
 </head>
 <body>
-  <p>Об'єкт можна створити двома способами:</p>
+  <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
   <table>
     <tr>
       <td>
-        <p1>1. let user = new Object(); // синтаксис "конструктора об’єктів"          
+        <p1>1. <a href="O1.html"> Літерали та властивості. </a>          
         </p1>
       </td>
     </tr>
     <tr>
       <td> 
-        <p1>2. let user = {};  // синтаксис "літералу об’єкта"
+        <p1>2.  "
          </p1>
       </td>
     </tr>
   </table>
-  <p>При виконнані let user = new Object(); або let user = {}; створюється пустий об'єкт без ідентифікатора та значення.</p>
-  <p>Для створення об'єкту з ідентифікатором та значенням застосовують наступний синтаксис:</p>
-  <table>
-    <tr>
-      <td>
-        <p1>let user = {name: "John", age: 30}; // об'єкт з ідентифікатором name та age та значеннями "John" та 30.
-        </p1>
-      </td>
-    </tr>
-  </table>
-    <p>(В даному випадку "John" відноситься до рядків (string), а 30 до числа (number)</p>
-
-
-
-
-
-
-
-
-
-
-
+ 
   <script src="script_ObjectJS.js"></script>
 </body>
 </html>
