--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
     <noscript>JavaScript is disabled in your browser.</noscript>
     <link rel="stylesheet" href="style_indexhtml.css">
 </head>
-<p>none</p>
+<p>Зміст:</p>
 <body>
-<a href="TestJS/TestJS.html"> TestJS </a>
+
+    <table>
+        <tr>
+          <td>
+            <p1>1. </a>          
+            </p1>
+          </td>
+        </tr>
+        <tr>
+          <td> 
+            <p1>2.<a href="/Object/Object.html"> Об'єкти та їх властивості.
+             </p1>
+          </td>
+        </tr>
+      </table>
+     
 
 <script src="script_indexhtml.js"></script>
-
-<a href="Object/Object.html"> Об'єкти </a>
 
 </body>
 </html>
