--- a/Object/O1.html
+++ b/Object/O1.html
@@ -14,8 +14,8 @@
 
   <button url="https://a1gggg.github.io/JS_01_info/index.html/">НА ГОЛОВНУ</button>
 
-  <button type="button" onclick="https://a1gggg.github.io/JS_01_info/index.html/">НА ГОЛОВНУ</button>
-  
+  <button type="button" onclick="https://a1gggg.github.io/JS_01_info/index.html/">НА ГОЛОВНУ!!!!!!!</button>
+
 
   <p>Створення пустого об'єкту без ідентифікатора та значення.:</p>
   <table>
