--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
           <td> 
-            <p1>2.<a href="/Object/Object.html"> Об'єкти та їх властивості.
+            <p1>2.<a href="Object/Object.html"> Об'єкти та їх властивості.
              </p1>
           </td>
         </tr>
