--- a/Object/O1.html
+++ b/Object/O1.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Літерали та властивості</title>
   <h1>Літерали та властивості</h1>
-  <link rel="stylesheet" href="\style_indexhtml.css">
- 
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -15,8 +14,7 @@
   <button url="https://a1gggg.github.io/JS_01_info/index.html/">НА ГОЛОВНУ</button>
 
   <button type="button" onclick="https://a1gggg.github.io/JS_01_info/index.html/">НА ГОЛОВНУ!!!!!!!</button>
-
-
+  
   <p>Створення пустого об'єкту без ідентифікатора та значення.:</p>
   <table>
     <tr>
