--- a/Object/Object.html
+++ b/Object/Object.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Об'єкти</title>
   <h1>Об'єкти</h1>
-  <link rel="stylesheet" href="\style_indexhtml.css">
+  <link rel="stylesheet" href="style.css">
  
 </head>
 <body>
