Implement binary clock functionality with HTML structure, CSS styling, and JavaScript logic

--- a/Object/O1.html
+++ b/Object/O1.html
@@ -208,7 +208,7 @@
           // Синтаксис з використанням квадратних дужок [] навколо ключа в об'єкті (в даному випадку [fruit]) нам дозволяє передати значення, яке буде взяте змінною fruit з введенного в prompt. Наприклад, якщо в prompt введено apple, воно передається змінній fruit, і при використанні синтаксису bag.apple ми отримаємо значення 5. Якщо буде введено pear, то в результаті отримаємо undefined. Значення обчислюваної властивості просте: [fruit] означає, що назву властивості слід брати з fruit. І якщо відвідувач введе слово "apple", то в об’єкті bag тепер буде лежати властивість {apple: 5}.
         </p1>
         <br><br>
-        <p1>По суті, це працює так само як:</p1>
+        <p1>**По суті, це працює так само як:</p1>
         <br>
         <p2>
           let fruit = prompt("Які фрукти купити?", "apple");
@@ -222,11 +222,131 @@
           </p1>
           <p2>
           bag[fruit] = 5;
+          <br><br>
+        </p2>
+        <p1>**Випадки, якщо вираз складніший:</p1>
+        <br>
+        <p2>
+          let fruit = 'apple';
+          <br> &nbsp; &nbsp; 
+let bag = {
+  <br> &nbsp; &nbsp; 
+  [fruit + 'Computers']: 5 // bag.appleComputers = 5
+  <br> &nbsp; &nbsp; 
+};
+<br> &nbsp; &nbsp; 
+         </p2>
           <br>
+          <p1> 
+          // В даному випадку змінюється лише fruit на apple і в результаті ми отримаємо комбінований змінений ключ аppleComputers 
+          <br> 
+          </p1>
+        </td>
+      </tr>
+    </table>
+
+    <p>
+      Скорочений запис властивості зі змінної (Property value shorthand):
+    </p>
+    <table>
+      <tr>
+        <td>
+          <p2>
+            function makeUser(name, age) {
+            </br> &nbsp; &nbsp; &nbsp;
+              return {
+              </br> &nbsp; &nbsp; &nbsp;
+                name: name,
+              </br> &nbsp; &nbsp; &nbsp;
+                age: age,
+              </br> &nbsp; &nbsp; &nbsp;
+                             };
+            }
+          </br> &nbsp; &nbsp; &nbsp;
+            let user = makeUser("Іван", 30);
+          </br> &nbsp; &nbsp; &nbsp;
+            alert(user.name); // Іван
+          </br> &nbsp; &nbsp; &nbsp;
+          </p2>
+        <br>
+          <p1>
+            //  Синтаксис name: name, та age: age, (повторення) допомогає нам скоротити запис, якщо назва ключа та змінної однакові та повертати й присвоювати значення, яке було отримано через ключ.
+          </p1>
+        </br> 
+      </br> 
+          <p1>
+            **Це також можна записати як:
+          </p1>
+        </br> 
+          <p2> 
+          function makeUser(name, age) {
+          </br> &nbsp; &nbsp; &nbsp;
+            return {
+            </br> &nbsp; &nbsp; &nbsp;
+              name, // те ж саме, що name: name
+            </br> &nbsp; &nbsp; &nbsp;
+              age,  // те ж саме, що age: age
+            </br> &nbsp; &nbsp; &nbsp;
+             };
+            </br> &nbsp; &nbsp; &nbsp;
+          }
+        </br> &nbsp; &nbsp; &nbsp;
+        </p2>
+      </br> 
+      <p1>
+        **Або комбінувати з звичайним записом:
+      </p1>
+    </br> 
+      <p2> 
+      function makeUser(name, age) {
+      </br> &nbsp; &nbsp; &nbsp;
+        return {
+        </br> &nbsp; &nbsp; &nbsp;
+          name, // або name: name
+        </br> &nbsp; &nbsp; &nbsp;
+        age: 30, // звичайний запис
+        </br> &nbsp; &nbsp; &nbsp;
+         };
+        </br> &nbsp; &nbsp; &nbsp;
+      }
+    </br> &nbsp; &nbsp; &nbsp;
+    </p2>
+        </td>
+      </tr>
+    </table>
+  
+
+    <p>
+      Обмеження для імен властивостей:
+    </p>
+    <table>
+      <tr>
+        <td>
+        <br> 
+        <p1>
+          // Немає ніяких обмежень щодо назв властивостей. Це можуть бути будь-які рядки або символи (спеціальний тип для ідентифікаторів, про які буде сказано пізніше). нші типи автоматично перетворюються на рядки. Наприклад, число 0 стає рядком "0", коли використовується як ключ властивості.
+          </p1>
+          <br> <br> 
+          <p1>**Особливості спеціальнї властивості __proto__</p1>
+        <br>  
+          <p2>
+            let obj = {};
+          </br> &nbsp; &nbsp;  
+obj.__proto__ = 5; // присвоїмо число
+          </br> &nbsp; &nbsp;  
+alert(obj.__proto__); // [object Object] - значення є об’єктом, тобто не те, що ми очікували
+          </br> 
+          </p2>
+          <p1> 
+          //Як ми бачимо з коду, присвоєння числа 5 ігнорується. Причина чому це відбувається буде пояснена пізніше, але зараз ми можемо просто запам'ятати, що __proto__ - це особлива властивість, яка не може бути перезаписана.
         </p2>
         </td>
       </tr>
     </table>
+
+
+
+
 
 
 
