--- a/TestJS/TestJS.html
+++ b/TestJS/TestJS.html
@@ -12,7 +12,17 @@
 
   
 
-  
+
+
+
+
+
+  <div id="binary-hours"></div>
+  <div id="binary-minutes"></div>
+  <div id="binary-seconds"></div>
+  <script src="bclock.js"></script>
+
+
   <div class="btn-up btn-up_hide"></div>
   <script>
     const btnUp = {
