--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <noscript>JavaScript is disabled in your browser.</noscript>
     <link rel="stylesheet" href="style_indexhtml.css">
 </head>
-<p>Зміст:</p>
-<body>
 
+<body>
+  <div id="binary-hours"></div>
+  <div id="binary-minutes"></div>
+  <div id="binary-seconds"></div>
+  <script src="bclock.js"></script>
+
+
+  <p>Зміст:</p>
     <table>
         <tr>
           <td>
