Add Object and TestJS pages with binary clock functionality
- Created Object.html with basic structure and navigation.
- Implemented script_ObjectJS.js for future JavaScript functionality.
- Added style.css for Object page styling, including button and table styles.
- Developed TestJS.html for testing JavaScript features.
- Implemented bclock.js to display binary time.
- Created script_TestJS.js for additional JavaScript functionality.
- Added style.css for TestJS page styling, consistent with Object page.
- Included scroll-to-top button functionality in both pages.

--- a/javascript/JS.html
+++ b/javascript/JS.html
@@ -6,10 +6,13 @@
     <title>Index</title>
     <h1>Index</h1>
     <noscript>JavaScript is disabled in your browser.</noscript>
-    <link rel="stylesheet" href="style_indexhtml.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+  <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
+  <br>
   <div id="binary-hours"></div>
   <div id="binary-minutes"></div>
   <div id="binary-seconds"></div>
@@ -26,14 +29,15 @@
         </tr>
         <tr>
           <td> 
-            <p1>2.<a href="javascript/JS.html"> Java Script.
+            <p1>2.<a href="Object/Object.html"> Об'єкти JavaScript.
              </p1>
           </td>
         </tr>
       </table>
      
 
-
+      <br>
+      <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
       <div class="btn-up btn-up_hide"></div>
       <script>
         const btnUp = {
