--- a/javascript/Object/O1.html
+++ b/javascript/Object/O1.html
@@ -549,7 +549,7 @@ alert( String( Math.trunc( Number("1.2")))); // отримано "1", після
   </tr>
 </table>
 
-
+******************************************************************************
 <p>
   Тест на перевірку наявності ключів в об'єкті:
 </p>
@@ -583,26 +583,43 @@ function isEmpty(obj) {
       </tr> 
       </table>
 
- 
-
-*****
-Підсумувати значення об'єкта:
+<p>
+  Підсумувати числові значення об'єкта::
+</p>
+<table>
+  <tr>
+    <td>
+      <p1> 
 let salaries = {
+</br> &nbsp; &nbsp;  &nbsp; 
   John: 100,
+</br> &nbsp; &nbsp;  &nbsp; 
   Ann: 160,
+</br> &nbsp; &nbsp;  &nbsp; 
   Pete: 130
+</br> &nbsp; &nbsp;  
 }
-
+</br> </br>   &nbsp; 
 function sumSalaries(salaries) {
+</br> &nbsp; &nbsp;  &nbsp; 
   let sum = 0;
+</br> &nbsp; &nbsp;  &nbsp; 
   for (let key in salaries) {
+  </br> &nbsp; &nbsp;  &nbsp; 
     sum += salaries[key];
+  </br> &nbsp; &nbsp;  &nbsp; 
   }
+</br> &nbsp; &nbsp;  &nbsp; 
   return sum;
+</br> &nbsp; &nbsp;  &nbsp; 
 }
+</br> </br> &nbsp; 
 
 alert (sumSalaries(salaries)); 
-******
+</p2>
+</td>
+</tr> 
+</table>
 
 
 
