--- a/javascript/Object/Object.html
+++ b/javascript/Object/Object.html
@@ -13,7 +13,7 @@
   <table>
     <tr>
       <td>
-        <p1>1. <a href="O1.html"> Літерали та властивості. </a>          
+        <p1>1. <a href="O1.html"> Основи. </a>          
         </p1>
       </td>
     </tr>
