Refactor HTML structure and styles for binary clock implementation; add introductory content and styles for first steps

--- a/javascript/JS.html
+++ b/javascript/JS.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <h1>Index</h1>
+    <title>JavaScript</title>
+    <h1>JavaScript</h1>
     <noscript>JavaScript is disabled in your browser.</noscript>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
-  <br>
   <div id="binary-hours"></div>
   <div id="binary-minutes"></div>
   <div id="binary-seconds"></div>
   <script src="bclock.js"></script>
-
+  <br>
+  <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
+  <br>
 
   <p>Зміст:</p>
     <table>
         <tr>
           <td>
-            <p1>1. </a>          
+            <p1>2.<a href="first-steps/FS.html"> Вступ.
             </p1>
           </td>
         </tr>
@@ -35,6 +35,15 @@
         </tr>
       </table>
      
+
+
+      <p>JavaScript - це мова програмування, яка дозволяє створювати інтерактивні елементи на веб-сторінках. 
+        Вона використовується для створення динамічного контенту, управління мультимедіа, анімації та багато іншого.</p>
+      <p1>Пошук терміну через Google:  <p2>MDN [термін]  &nbsp;  або</p2> <a href ="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference"> <p2>ПОСИЛАННЯ</p2></a></p1>
+      <br>
+      <p1>Специфікація ECMA-262 :    <a href ="https://www.ecma-international.org/publications/standards/Ecma-262.htm"> <p2>ECMA-262</p2></a></p1>
+      <br>
+      <p></p>
 
       <br>
       <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
