Refactor variable assignment section and enhance naming conventions guidelines in FS.html

--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -114,17 +114,26 @@ alert(x); // виведе 'Світ!'
 <br><br>
 
 <p1>
-  Присвоєння змінній значення іншої змінної:
-  </p1><br>
-  <p2> 
-  let x = 10;  
-  <br>&nbsp;  &nbsp;
-  let у = 5;  
-  <br>&nbsp;  &nbsp;
-  x = y; // присвоєння значення у змінній x;
-  <br><br>&nbsp;  &nbsp;
-  alert(x); // виведе 5;
-  </p2>
+Присвоєння змінній значення іншої змінної:
+</p1><br>
+<p2> 
+let x = 10;  
+<br>&nbsp;  &nbsp;
+let у = 5;  
+<br>&nbsp;  &nbsp;
+x = y; // присвоєння значення у змінній x;
+<br><br>&nbsp;  &nbsp;
+alert(x); // виведе 5;
+</p2>
+<br><br>
+<p1> Правила назви змінної:<br>
+Змінна може мати будь-яке ім'я, яке починається з літери, знака підкреслення (_) або знака долара ($). Далі можуть бути літери, цифри, знак підкреслення (_) або знак долара ($). Імена змінних чутливі до регістру. При створенні використовується верблюжий регістр наприклад: myVariableName. Для створення const використовуються верхній регстр наприклад MY_VARIABLE_NAME, COLOR_RED і тд. Змінна не може починатись з цифри. Змінна не може мати пробіли, дефіси, крапки, коми, дужки та інші символи. Змінна не може мати зарезервовані слова JavaScript (наприклад: let, var, const, if, else, for, while тощо). <br><br>
+    Правила придумування імен:<br>
+* Використовуйте імена, які легко прочитати, як-от userName або shoppingCart.<br>
+* Уникайте використання абревіатур або коротких імен, таких як a, b та c, окрім тих випадків, коли ви точно знаєте, що так потрібно.<br>
+* Робіть імена максимально описовими і лаконічними. Наприклад, такі імена погані: data і value. Такі імена нічого не говорять. Їх можна використовувати лише тоді, коли з контексту очевидно, на які дані або значення посилається змінна.<br>
+* Погоджуйте з вашою командою (та з самим собою), які терміни будуть використовуватися у проєкті. Якщо відвідувач сайту називається “user”, тоді ми маємо давати відповідні імена іншим пов’язаним змінним: currentUser або newUser, замість currentVisitor або newManInTown.
+</p1>
 </td>
 </tr>
 </table>
