Enhance TypeScript section with additional explanations and examples; include code snippets for TypeScript and JavaScript

--- a/typescript/typescript.html
+++ b/typescript/typescript.html
@@ -47,7 +47,23 @@
 </table>
 
 
-TypeScript - це мова програмування, яка є надбудовою над JavaScript. Вона додає статичну типізацію та інші можливості, які роблять код більш зрозумілим і легким для підтримки. TypeScript компілюється в JavaScript, що дозволяє використовувати його в будь-якому середовищі, де підтримується JavaScript. TypeScript дозволяє вказувати типи даних, які передаються в коді, і має можливість повідомляти про помилки, коли типи не збігаються.
+TypeScript - це мова програмування, яка є надбудовою над JavaScript. Вона додає статичну типізацію та інші можливості, які роблять код більш зрозумілим і легким для підтримки. TypeScript компілюється в JavaScript, що дозволяє використовувати його в будь-якому середовищі, де підтримується JavaScript. TypeScript дозволяє вказувати типи даних, які передаються в коді, і має можливість повідомляти про помилки, коли типи не збігаються. TypeScript повідомить про помилку під час передачі рядка у функцію, яка очікує число. JavaScript не буде цього робити.TypeScript використовує перевірку типу під час компіляції. Це означає, що він перевіряє відповідність указаних типів перед виконанням коду, а не під час виконання коду. Це дозволяє виявляти помилки на етапі розробки, що робить код більш надійним. TypeScript також підтримує об'єктно-орієнтоване програмування, що дозволяє створювати класи, інтерфейси та модулі. Це робить код більш структурованим і легким для розуміння. TypeScript має потужну систему типів, яка дозволяє визначати типи даних для змінних, функцій та класів. Це допомагає уникнути помилок під час виконання коду та робить його більш зрозумілим. TypeScript також підтримує сучасні можливості JavaScript, такі як стрілочні функції, деструктуризація та асинхронні функції. Це дозволяє використовувати нові можливості JavaScript без необхідності чекати на їх підтримку в браузерах.
+
+Поширеним способом використання TypeScript є використання офіційного компілятора TypeScript, який транспілює код TypeScript у JavaScript.
+У наступному розділі показано, як отримати налаштування компілятора для локального проєкту.
+Деякі популярні редактори коду, наприклад Visual Studio Code, мають вбудовану підтримку TypeScript і можуть показувати помилки під час написання коду!
+  <br>
+  <h2>Приклад коду на TypeScript:</h2>
+  <code>
+    <script src="script.js"></script>
+  </code>
+  <br>
+  <h2>Приклад коду на JavaScript:</h2>
+  <code>
+    <script src="script.js"></script>
+  </code>
+
+
 
 
 
